Impovements done during mentorship session