@@ -8,10 +8,8 @@ import com.javachallenge.basico.security.service.UserDetailsImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -48,6 +46,6 @@ public class UserService {
         Set<User> userList = repository.findAllByFavoritesIsNotNull();
         return userList.stream()
                 .map(UserMovieResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
